--- a/elements/style.css
+++ b/elements/style.css
@@ -66,3 +66,22 @@ section p{
     background:#fff;
     color: #333;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+  
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background:transparent;  
+}
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+ }
